--- a/resources/views/auth/forgotpassword.edge
+++ b/resources/views/auth/forgotpassword.edge
@@ -1,31 +1,41 @@
-@layout('templates.auth')
+@layout('templates.index')
 @section('title')
-  Forgot Password
+Forgot Password
 @endsection
 @section('content')
+<div class="container my-4">
+  <div class="row">
+    <div class="col-md-4">
 
-<div class="p-3">
-  @include('includes.alert')
-     @!section('content')
-  <form class="form-horizontal m-t-30" action="{{ route('app.forgotpassword') }}" method="POST">
-      {{ csrfField() }}
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input type="text" class="form-control" name="email" id="email"
-        placeholder="Enter email">
     </div>
-    <div class="form-group row m-t-20">
-      <div class="col-12 text-right">
-        <button class="btn btn-primary w-md waves-effect waves-light" type="submit">Recover Password</button>
+    <div class="col-md-4">
+  @include('includes.alert')
+
+      <div class="card">
+
+        <h4 class="card-header fm1 text-white text-center py-3 mb-4">
+          <strong>Recover Password</strong>
+        </h4>
+        <!--Card content-->
+        <div class="card-body px-lg-5 pt-0">
+          <!-- Form -->
+          <form class="text-center" style="color: #757575;" action="{{ route('app.forgotpassword') }}" method="POST">
+            {{ csrfField() }}
+            <!-- Email -->
+            <div class="md-form">
+              <input type="email" id="materialLoginFormEmail" name="email" class="form-control">
+              <label for="materialLoginFormEmail">E-mail</label>
+            </div>
+
+
+            <!-- Sign in button -->
+            <button class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0" type="submit">Recover Password</button>
+
+          </form>
+          <!-- Form -->
+        </div>
       </div>
     </div>
- 
-    <div class="m-t-40 text-center">
-        <a href="{{ route('app.signin') }}" class="text-primary">Sign In Here</a> 
-    </p>
-
-    </div>
-
-  </form>
-
+  </div>
+</div>
 @endsection
