--- a/resources/views/auth/signin.edge
+++ b/resources/views/auth/signin.edge
@@ -1,44 +1,60 @@
-@layout('templates.auth')
+@layout('templates.index')
 @section('title')
   Sign In
 @endsection
 @section('content')
 
-<div class="p-3">
+<div class="container my-4">
+
+  <div class="row">
+    <div class="col-md-4">
+
+    </div>
+    <div class="col-md-4">
   @include('includes.alert')
-     @!section('content')
-  <form class="form-horizontal m-t-30" action="{{ route(authFrom + '.signin') }}" method="POST">
-      {{ csrfField() }}
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input type="text" class="form-control" name="email" id="email"
-        placeholder="Enter email">
-    </div>
-    <div class="form-group">
-      <label for="userpassword">Password</label>
-      <input type="password" class="form-control" name="password" id="userpassword"
-        placeholder="Enter password">
-    </div>
-    <div class="form-group row m-t-20">
-      <div class="col-12 text-right">
-        <button class="btn btn-primary w-md waves-effect waves-light" type="submit">Log In</button>
-      </div>
-    </div>
-    @if(authFrom == 'app')
 
-    <div class="form-group m-t-10 mb-0 row">
-      <div class="col-12 m-t-20">
-        <a href="{{ route('app.forgotpassword') }}" class="text-muted"><i class="mdi mdi-lock"></i> Forgot your password?</a>
-      </div>
-    </div>
+      <div class="card">
+
+        <h4 class="card-header fm1 text-white text-center py-3 mb-4">
+          <strong>Welcome back...</strong>
+        </h4>
+        <!--Card content-->
+        <div class="card-body px-lg-5 pt-0">
+          <!-- Form -->
+          <form class="text-center" style="color: #757575;" action="{{ route(authFrom + '.signin') }}" method="POST">
+            {{ csrfField() }}
+            <!-- Email -->
+            <div class="md-form">
+              <input type="email" id="materialLoginFormEmail" name="email" class="form-control">
+              <label for="materialLoginFormEmail">E-mail</label>
+            </div>
+            <!-- Password -->
+            <div class="md-form">
+              <input type="password" id="materialLoginFormPassword" name="password" class="form-control">
+              <label for="materialLoginFormPassword">Password</label>
+            </div>
+            <div class="d-flex justify-content-around">
+              <div>
+                @if(authFrom == 'app')
+              <a href="{{ route('app.forgotpassword') }}">Forgot password?</a>
+              @endif
+              </div>
+            </div>
+            <!-- Sign in button -->
+            <button class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0" type="submit">Sign In</button>
+    @if(authFrom == 'app')
+            <!-- Register -->
+            <h6>Not a member?
+              <a href="{{ route('app.signup') }}">Register</a>
+            </h6>
     @endif
 
-  </form>
-  <div class="m-t-40 text-center">
-    @if(authFrom == 'app')
-    <p>Don't have an account ?
-      <a href="{{ route('app.signup') }}" class="text-primary">Signup Now</a>
-    </p>
-    @endif
+          </form>
+          <!-- Form -->
+        </div>
+      </div>
+    </div>
   </div>
+</div>
+
 @endsection
