--- a/resources/views/templates/index.edge
+++ b/resources/views/templates/index.edge
@@ -1,8 +1,5 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +10,6 @@
   <link rel="icon" href="/assets/images/favicon.png">
   <title>LandCrowdy -
       @!section('title')
-
   </title>
 </head>
 
@@ -42,7 +38,7 @@
 
   <!--Navbar -->
   <nav class=" navbar navbar-expand-lg navbar-dark default-color bg-dark sticky-top">
-    <a class="navbar-brand" href="http://www.landcrowdy.com.ng"><img src="/assets/images/logo12.png" alt=""></a>
+    <a class="navbar-brand" href="/"><img src="/assets/images/logo12.png" alt=""></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
       aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -62,14 +58,10 @@
             <a class="dropdown-item" href="{{ route('guest.company') }}">Our Company</a>
             <a class="dropdown-item" href="{{ route('guest.blog') }}">Blog</a>
             <a class="dropdown-item" href="{{ route('guest.teams') }}">Our Team</a>
-
           </div>
         </li>
         <li class="nav-item">
           <a class="nav-link mx-3" href="{{ route('guest.property') }}">Properties</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link mx-3" href="plan.html">Investment Plan</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle mx-3" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
@@ -82,8 +74,8 @@
         </li>
 
       </ul>
-      <a class="btn tnav4 waves-effect text-white mx-1" href="login.html" role="button">Sign In</a>
-      <a class="btn tnav4 waves-effect text-white mx-1" href="register.html" role="button">Create A Free Account</a>
+    <a class="btn tnav4 waves-effect text-white mx-1" href="{{ route('app.signin') }}" role="button">Sign In</a>
+      <a class="btn tnav4 waves-effect text-white mx-1" href="{{ route('app.signup') }}" role="button">Create A Free Account</a>
   </nav>
   <!--/.Navbar -->
 
@@ -93,7 +85,7 @@
   <div class="container-fluid bg-dark">
     <div class="row mx-5 py-5">
       <div class="col-md-4">
-        <a href="index.html"> <img src="/assets/images/logo12.png" alt=""> </a>
+        <a href="/"> <img src="/assets/images/logo12.png" alt=""> </a>
         <h6 class="mt-3 text-white">We are Nigeria’s 1st Property tech company whose mission is to end the problem of
           shelter in Nigeria, one building at a time.</h6>
         <b></span><br> <span class="text-success">info@landcrowdy.com.ng</span> </h5>
